# ClipChop

./: .gitignore  .pre-commit-config.yaml  .releaserc.yaml  Makefile  README.md
.github/workflows/: ci.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
