[package]
name = "clipchop"
version = "0.1.0"
description = "Batch video clip extractor - chop videos using CSV timecodes"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rfd = "0.15"
which = "7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
